<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright (C) 2015 Christopher Zell <zelldon91@googlemail.com>

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->


<resources>
    <string name="app_name">Zell-Android-Util</string>
    <string name="progress">Please wait&#8230;</string>
    <!--SPLASH SCREEN-->
    <string name="splash_descr">The splash screen.</string>
    <!--DeviceInfoProvider-->
    <string name="log_device_os">Android</string>
    <string name="log_device_res">%1$dx%2$d</string>
    
    <!--Welcome Fragment-->
    <string name="frag_welcome">Welcome!</string>
    
    <!--MainNavigationDrawer-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="search_submitted">Submitted: %1$s</string>
    <string name="search">Search</string>
    
    
    <!--ASYNC BITMAP LOADER-->
    <string name="log_bitmap_alloc">Bitmap created, bytes allocated: %1$s</string>
    
    <!--INFO ALERT DIALOG-->
    <string name="ok">OK</string>
    <!--APP RATE ALERT DIALOG-->
    <string name="alert_app_rate_head">Please rate</string>
    <string name="alert_app_rate_dscr">Please rate the app on Google Play.</string>
    <string name="alert_app_rate_btn">Rate</string>
    <string name="alert_app_rate_later_btn">Later</string>
    <string name="alert_app_rate_uri">market://details?id=%1$s</string>
</resources>
